[package]
name = "ckb-graphql-server"
version = "0.1.0"
authors = ["Xuejie Xiao <xxuejie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-db = { path = "../ckb/db" }
ckb-store = { path = "../ckb/store" }
ckb-jsonrpc-types = { path = "../ckb/util/jsonrpc-types" }
clap = "2.33.0"
env_logger = "0.6.2"
futures = "0.1"
hyper = "0.12"
juniper = "0.14.1"
juniper_hyper = "0.5.1"
serde_json = "1.0"
serde_plain = "0.3.0"

[dependencies.rocksdb]
# git = "https://github.com/nervosnetwork/rust-rocksdb"
# rev = "a45fb07"
path = "../rust-rocksdb"
