[package]
name = "ckb-graphql-server"
version = "0.1.0"
authors = ["Xuejie Xiao <xxuejie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-db = { git = "https://github.com/nervosnetwork/ckb.git", tag = "v0.34.1" }
ckb-store = { git = "https://github.com/nervosnetwork/ckb.git", tag = "v0.34.1" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb.git", tag = "v0.34.1" }
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb.git", tag = "v0.34.1" }
clap = "2.33.0"
env_logger = "0.6.2"
futures = "0.1"
hyper = "0.12"
juniper = "0.14.1"
juniper_hyper = "0.5.1"
serde_json = "1.0"
serde_plain = "0.3.0"

[dependencies.rocksdb]
package = "ckb-rocksdb"
version = "=0.13.0"
features = ["snappy"]
